Bug 901658 - Introduce an uninlined version of JSScript::global() to use in Debugger.h assertions. r=njn